#2977 fixes deprecation warning: wrap the declaration in & {}

--- a/packages/core/src/components/accordion/components/accordion-section-theme-compact-black.scss
+++ b/packages/core/src/components/accordion/components/accordion-section-theme-compact-black.scss
@@ -106,7 +106,9 @@
 @mixin dso-web-component-accordion-compact-black-verwijder() {
   @include delete.root($strikethrough: true);
 
-  background-color: colors.$rood-20;
+  & {
+    background-color: colors.$rood-20;
+  }
 
   .dso-section-body {
     background-color: colors.$rood-20;
