--- a/packages/core/src/components/action-list/components/action-list-item.scss
+++ b/packages/core/src/components/action-list/components/action-list-item.scss
@@ -43,10 +43,13 @@ h3 {
   @include heading.base();
   @include heading.h3();
 
-  margin-block-end: units.$u2;
-  margin-block-start: 0;
-  min-block-size: units.$u6;
-  padding-block-start: 9px;
+  // stylelint-disable-next-line no-duplicate-selectors -- needed to fix sass deprecation warnings: #2977
+  & {
+    margin-block-end: units.$u2;
+    margin-block-start: 0;
+    min-block-size: units.$u6;
+    padding-block-start: 9px;
+  }
 }
 
 .dso-action-list-item {
