--- a/packages/core/src/components/document-component/document-component.scss
+++ b/packages/core/src/components/document-component/document-component.scss
@@ -34,7 +34,10 @@
 :host(:where([wijzigactie="verwijder"])) {
   @include delete.root($strikethrough: false);
 
-  --_dso-document-component-text-decoration: line-through;
+  // stylelint-disable-next-line no-duplicate-selectors -- needed to fix sass deprecation warnings: #2977
+  & {
+    --_dso-document-component-text-decoration: line-through;
+  }
 }
 
 .heading-element,
