--- a/packages/core/src/components/list-button/list-button.scss
+++ b/packages/core/src/components/list-button/list-button.scss
@@ -84,11 +84,14 @@
   > .dso-input-number {
     @include _state-styling(colors.$wit, colors.$grijs-20, colors.$grijs-90);
 
-    border-style: solid;
-    border-width: 1px;
-    flex-wrap: nowrap;
-    padding-block: 0;
-    padding-inline: units.$u2;
+    // stylelint-disable-next-line no-duplicate-selectors -- needed to fix sass deprecation warnings: #2977
+    & {
+      border-style: solid;
+      border-width: 1px;
+      flex-wrap: nowrap;
+      padding-block: 0;
+      padding-inline: units.$u2;
+    }
 
     @media screen and (max-width: media-query-breakpoints.$screen-xs-max) {
       justify-content: center;
@@ -103,10 +106,13 @@
   > *.dso-selected + .dso-input-number {
     @include _state-styling(colors.$wit, button.$secondary-border-color, colors.$grijs-90);
 
-    box-shadow:
-      inset 0 -1px 0 0 button.$secondary-border-color,
-      inset 0 1px 0 0 button.$secondary-border-color,
-      inset -1px 0 0 0 button.$secondary-border-color;
+    // stylelint-disable-next-line no-duplicate-selectors -- needed to fix sass deprecation warnings: #2977
+    & {
+      box-shadow:
+        inset 0 -1px 0 0 button.$secondary-border-color,
+        inset 0 1px 0 0 button.$secondary-border-color,
+        inset -1px 0 0 0 button.$secondary-border-color;
+    }
   }
 
   > *:active + .dso-input-number,
@@ -123,7 +129,10 @@
     &:hover {
       @include _state-styling(colors.$wit, colors.$grijs-20, colors.$grijs-60);
 
-      opacity: 1;
+      // stylelint-disable-next-line no-duplicate-selectors -- needed to fix sass deprecation warnings: #2977
+      & {
+        opacity: 1;
+      }
     }
   }
 
@@ -145,17 +154,20 @@
 
   @include _state-styling(colors.$wit, colors.$grijs-20, colors.$grijs-90);
 
-  border-radius: button.$border-radius;
-  border-width: 1px;
-  border-style: solid;
-  font-weight: 600;
-  padding-block: #{units.$u2 - 1};
-  padding-inline: #{units.$u2 - 1} #{units.$u6 - 1};
-  position: relative;
-  text-align: start;
-  white-space: normal;
-  inline-size: 100%;
-  cursor: pointer;
+  // stylelint-disable-next-line no-duplicate-selectors -- needed to fix sass deprecation warnings: #2977
+  & {
+    border-radius: button.$border-radius;
+    border-width: 1px;
+    border-style: solid;
+    font-weight: 600;
+    padding-block: #{units.$u2 - 1};
+    padding-inline: #{units.$u2 - 1} #{units.$u6 - 1};
+    position: relative;
+    text-align: start;
+    white-space: normal;
+    inline-size: 100%;
+    cursor: pointer;
+  }
 
   &:hover,
   &:focus {
