--- a/packages/dso-toolkit/src/components/button/button.mixins.scss
+++ b/packages/dso-toolkit/src/components/button/button.mixins.scss
@@ -133,7 +133,9 @@
 }
 
 @mixin small() {
-  line-height: typography.$root-font-size-base;
+  & {
+    line-height: typography.$root-font-size-base;
+  }
 
   dso-icon,
   svg.di,
